[package]
name = "adblock-rs"
version = "0.3.4"
authors = ["Andrius Aucinas <aaucinas@brave.com>", "Anton Lazarev <alazarev@brave.com>"]
edition = "2018"
license = "MPL-2.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "adblock_rs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "=0.7.1"

[dependencies]
serde =  { version = "1.0.123", features = ["derive", "rc"] }
adblock = { path = "../", default-features = false, features = ["css-validation", "content-blocking", "embedded-domain-resolver", "resource-assembler"] }
neon = "=0.7.1"
neon-serde = { path = "../neon-serde" }
